--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -22,6 +22,10 @@
             {{ form.email.label_tag }}
             {{ form.email|add_class:"form-control" }}
         </div>
+        <div class="mb-3">
+            {{ form.phone.label_tag }}
+            {{ form.phone|add_class:"form-control" }}
+        </div>
         <button type="submit" class="btn btn-primary">Save Changes</button>
     </form>
 </div>
